--- a/source-code/starter-project/gradle/libs.versions.toml
+++ b/source-code/starter-project/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ composeBom = "2024.08.00"
 navigationCompose = "2.8.0-rc01"
 room = "2.6.1"
 ksp = "2.0.20-1.0.24"
+kotlinxCoroutines = "1.8.0"
 kotlinSerialization = "2.0.0"
 
 [libraries]
@@ -40,6 +41,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
